<resources>
    <string name="app_name">О себе</string>

    <string name="project_info">Когда у школьника возникает желение научиться чему-то новому, то ему может понадобиться учитель. Репититоры дороги и не всегда эффективны.
                Мы предлагаем другое решение: наше приложение позволяет находить школьников, готовых обмениваться знаниями.\n
                Например, 1-й школьник умеет петь, но не умеет танцевать (хочет научиться), ему нужно найти другого школьника, умееющего танцевать, но не умееющего петь (хочет науиться). Наше приложение позволяет осуществить поиск.</string>

    <string name="name">Вязов Глеб</string>
    <string name="class1">Закончил 9 класс</string>
    <string name="project_name">SkillsExchange</string>
    <string name="my_skills">Мои навыки</string>
    <string name="github">GitHub</string>
    <string name="apply">Применить</string>
    <string name="_1m">1 месяц</string>
    <string name="_3m">3 месяца</string>
    <string name="_1y">1 год</string>
    <string name="_3y">3 года</string>
    <string name="all">Все</string>
    <string name="filter">Фильтр</string>
</resources>